@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH landscape-sysinfo 1 "05 January 2017" "" ""
+.TH landscape-sysinfo 1 "07 March 2018" "" ""
 .SH NAME
 \fBlandscape-sysinfo \fP- Display a summary of the current system status
 \fB
@@ -59,21 +59,21 @@ This always take precedence over plugins to include.
 .RE
 .PP
 Default plugins: Load, Disk, Memory, Temperature, Processes, LoggedInUsers,
-LandscapeLink, Network
+Network
 .SH CONFIGURATION FILE
 
 Any of the long command-line \fIoptions\fP can be used as a configuration directive
 in that configuration file, under the section [sysinfo], by replacing the hyphen
 (-) with an underscore (_).
 .PP
-For example, to disable the LandscapeLink and Temperature plugins
+For example, to disable the Network and Temperature plugins
 without having to use the command line option, the following can be added to
 /etc/landscape/client.conf:
 .PP
 .nf
 .fam C
     [sysinfo]
-    exclude_sysinfo_plugins = Temperature, LandscapeLink
+    exclude_sysinfo_plugins = Temperature, Network
 
 
 .fam T
@@ -85,6 +85,9 @@ This is the default configuration with all plugins enabled:
 .nf
 .fam C
     $ landscape-sysinfo
+
+.nf
+.fam C
       System load:    0.66               Processes:             242
       Usage of /home: 72.0% of 27.50GB   Users logged in:       1
       Memory usage:   31%                IP address for wlan0:  10.0.1.6
@@ -93,19 +96,18 @@ This is the default configuration with all plugins enabled:
 
       => There is 1 zombie process.
 
-      Graph this data and manage this system at https://landscape.canonical.com/
-
 .fam T
 .fi
-If you want to disable the temperature and Landscape plugins, you could run it like this:
+If you want to disable the temperature and Network plugins, you could run it like this:
 .PP
 .nf
 .fam C
-    $ landscape-sysinfo --exclude-sysinfo-plugins=Temperature,LandscapeLink
-      System load:    1.08               Processes:             242
-      Usage of /home: 72.0% of 27.50GB   Users logged in:       1
-      Memory usage:   31%                IP address for wlan0:  10.0.1.6
-      Swap usage:     0%                 IP address for virbr0: 192.168.122.1
+    $ landscape-sysinfo --exclude-sysinfo-plugins=Temperature,Network
+
+.nf
+.fam C
+      System load: 0.3               Memory usage: 12%   Processes:       88
+      Usage of /:  14.0% of 9.52GB   Swap usage:   0%    Users logged in: 1
 
       => There is 1 zombie process.
 
